# cpp_tttb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_download_link.txt  create_release_folder.ipynb  create_release_folder.py  fill_in_within_session_test_numbers.ipynb  keypress_processing_notes.txt  pandoc_readme_md_to_pdf_command.sh  pandoc_readme_md_to_pdf_command.txt  tttb.cpp  typing_test_code.cpp  verse_to_word_testbed.cpp
Files/: CPDB_for_TTTB_from_program.csv  game_config.csv  game_config_headers_only.csv  keypress_processing_time.csv  switch_test_plan.csv  switch_test_plan.xlsx  test_results.csv  test_results_headers_only.csv  untyped_verses.csv  word_results.csv  word_results_headers_only.csv
Files/Multiplayer/: 20250629T000852_mptest.csv  20250629T001609_SecondTest.csv  20250706T220148_string.csv  20250706T220148_string_pivot.csv
Files/Old_Files_from_TTTB_Gameplay_Demo_Vid/: test_results.csv  word_results.csv
Testing/: WPMCheck.csv
Visualizations/: mp_visualizations.ipynb  mp_visualizations.py  sp_visualizations.ipynb  sp_visualizations.py
Visualizations/Multiplayer/: 20250715T001104_breaktest_Mean_WPM_By_Player_And_Round.html  20250715T001104_breaktest_Mean_WPM_By_Player_And_Test.html  20250715T001104_breaktest_highest_wpm_by_player.html  20250715T001104_breaktest_wins_by_player.html  20250720T001003_randomversetesto_Mean_WPM_By_Player_And_Round.html  20250720T001003_randomversetesto_Mean_WPM_By_Player_And_Test.html  20250720T001003_randomversetesto_highest_wpm_by_player.html  20250720T001003_randomversetesto_wins_by_player.html  20250725T130325_CMR_highest_WPM_by_player.html  20250725T130325_CMR_mean_WPM_by_player_and_round.html  20250725T130325_CMR_mean_WPM_by_player_and_test.html  20250829T211930_mptest_highest_WPM_by_player.html  20250829T211930_mptest_mean_WPM_by_player_and_round.html  20250829T211930_mptest_mean_WPM_by_player_and_test.html  20250829T211930_mptest_wins_by_player.html
Visualizations/Single_Player/: Characters_typed_by_year_and_month.html  Endurance_Top_50_Clock_10-Minute_Block.html  Endurance_Top_50_Clock_15-Minute_Block.html  Endurance_Top_50_Clock_30-Minute_Block.html  Endurance_Top_50_Clock_Hour.html  Fastest_Tests.html  Keypresses_Typed_by_Date.html  Keypresses_typed_by_date.html  Mean_Rolling_WPM_by_accuracy_bin.html  Mean_WPM_by_Tag_1.html  Mean_WPM_by_Tag_2.html  Mean_WPM_by_Tag_3.html  Mean_WPM_by_Within_Session_Test_Number.html  Mean_WPM_by_accuracy_bin.html  Mean_WPM_by_within_session_test_number.html  Mean_rolling_WPM_by_accuracy_bin.html  Most_characters_typed_by_year_and_month.html  Progress_nominal.html  Progress_percentage.html  Top_Dates_by_Keypresses.html  Typed_verses.html  WPM_by_Within_Session_Test_Number.html  WPM_by_hour.html  WPM_by_race.html  WPM_by_within_session_test_number.html  avg_WPM_by_year_and_month.html  avg_wpm_by_year_and_month.html  characters_typed_by_year_and_month.html  chars_by_hour.html  endurance_top_50_clock_10-minute_block.html  endurance_top_50_clock_15-minute_block.html  endurance_top_50_clock_30-minute_block.html  endurance_top_50_clock_hour.html  fastest_tests.html  high_accuracy_words.html  keypresses_typed_by_date.html  low_accuracy_words.html  mean_WPM_by_accuracy_bin.html  mean_WPM_by_tag_1.html  mean_WPM_by_tag_2.html  (+17 more)
